--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio </a>
       <nav>
+        <a href="./index.html">WebStudio </a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -75,7 +75,7 @@
         <ul>
           <li>
             <img
-              src="images/img.jpg"
+              src="./imges/img.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="images/img(1).jpg"
+              src="./imges/img(1).jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -95,7 +95,7 @@
           </li>
           <li>
             <img
-              src="images/img(2).jpg"
+              src="./imges/img(2).jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -105,7 +105,7 @@
           </li>
           <li>
             <img
-              src="images/img(3).jpg"
+              src="./imges/img(3).jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -117,7 +117,7 @@
       </section>
     </main>
     <footer>
-      <a href="/index.html">WebStudio </a>
+      <a href="/index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
