--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <ul>
           <li>
             <img
-              src="./imges/img.jpg"
+              src="./images/img.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="./imges/img(1).jpg"
+              src="./images/img(1).jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -95,7 +95,7 @@
           </li>
           <li>
             <img
-              src="./imges/img(2).jpg"
+              src="./images/img(2).jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -105,7 +105,7 @@
           </li>
           <li>
             <img
-              src="./imges/img(3).jpg"
+              src="./images/img(3).jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
